# safe-model-serving-platform

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  ROADMAP.md  START_HERE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: v1.json  v2.json
docs/: architecture.md  git-push-plan.md  results.md
scripts/: demo.py
src/model_serving/: api.py  config.py  metrics.py  models.py  routing.py  service.py
tests/: conftest.py  test_api.py  test_models.py  test_serving.py
